renamed file with .md and updated for day 12 plan

--- a/round-1-2019.md
+++ b/round-1-2019.md
@@ -55,7 +55,18 @@ Thoughts: PHP101 sent me off to this series. Completed the videos on If, If/Else
 
 ### Day 10: August 11, 2019
 
-**Today's Progress: Completed 1 videos in the PHP 101 series.
+**Today's Progress: Completed 3 videos in the PHP 101 series.
 
 Thoughts: Video on variables, breaking up code into logical parts, subroutines aka functions. 
 
+### Day 11: August 12, 2019
+
+**Today's Progress: Completed 2 videos in the PHP 101 series.
+
+Thoughts: Video on loading files to run and on how code runs in order. 
+
+### Day 12: August 13, 2019
+
+**Today's Progress: Plan: Completed 2 videos in the PHP 101 series.
+
+Thoughts: Video on sequencing and loops. 
