--- a/round-1-2019.md
+++ b/round-1-2019.md
@@ -67,6 +67,6 @@ Thoughts: Video on loading files to run and on how code runs in order.
 
 ### Day 12: August 13, 2019
 
-**Today's Progress: Plan: Completed 2 videos in the PHP 101 series.
+**Today's Progress: Completed 3 videos in the PHP 101 series.
 
-Thoughts: Video on sequencing and loops. 
+Thoughts: Video on sequencing, loops, and strings with dots and variables. 
