--- a/round-1-2019.md
+++ b/round-1-2019.md
@@ -70,3 +70,9 @@ Thoughts: Video on loading files to run and on how code runs in order.
 **Today's Progress: Completed 3 videos in the PHP 101 series.
 
 Thoughts: Video on sequencing, loops, and strings with dots and variables. 
+
+### Day 13: August 14, 2019
+
+**Today's Progress: Completed 2 videos in the PHP 101 series.
+
+Thoughts: Videos on scope and naming. 
