--- a/round-1-2019.md
+++ b/round-1-2019.md
@@ -76,3 +76,16 @@ Thoughts: Video on sequencing, loops, and strings with dots and variables.
 **Today's Progress: Completed 2 videos in the PHP 101 series.
 
 Thoughts: Videos on scope and naming. 
+
+### Day 14: August 15, 2019
+
+**Today's Progress: Completed the last 2 videos in the PHP 101 series.
+
+Thoughts: Videos on putting it together and what's next. This is the end of the PHP 101 lab. Next up is Variables.
+
+### Day 15: August 16, 2019
+
+**Today's Progress: Plan: begin the variables bootcamp lab. 
+
+Thoughts: I'd like to be done with the variables lab over the weekend. 
+
