--- a/round-1-2019.md
+++ b/round-1-2019.md
@@ -85,7 +85,7 @@ Thoughts: Videos on putting it together and what's next. This is the end of the 
 
 ### Day 15: August 16, 2019
 
-**Today's Progress: Plan: begin the variables bootcamp lab. 
+**Today's Progress: Completed 4 videos in the variables bootcamp lab. 
 
-Thoughts: I'd like to be done with the variables lab over the weekend. 
+Thoughts: Videos on scope, function parameters, PHP internals and variables, and Gloval variables. 
 
