Day 18 - 20 updates and plan for day 21

--- a/round-1-2019.md
+++ b/round-1-2019.md
@@ -85,7 +85,45 @@ Thoughts: Videos on putting it together and what's next. This is the end of the 
 
 ### Day 15: August 16, 2019
 
+**Today's Progress: Completed 5 videos in the variables bootcamp lab. 
+
+Thoughts: Videos on scope, function parameters, PHP internals and variables, and Gloval variables, global variable internals. 
+
+### Day 16: August 17, 2019
+
 **Today's Progress: Completed 4 videos in the variables bootcamp lab. 
 
-Thoughts: Videos on scope, function parameters, PHP internals and variables, and Gloval variables. 
+Thoughts: Videos on scope, function parameters, PHP internals and variables, and Global variables. 
+
+### Day 17: August 20, 2019
+
+**Today's Progress: None, really. 
+
+Thoughts: Tried to setup Whoops and Kint on a local site for php code only. Complete fail. I could not get Whoops to run. At. All. Will try again tomorrow.
+
+### Day 18: August 21, 2019
+
+**Today's Progress: get an environment setup to play with php code using whoops and kint. 
+
+Thoughts: That failed again. I've finally just resorted to using Local by Flywheel and a WP install.
+
+### Day 19: August 22, 2019
+
+**Today's Progress: Got the testing environment done using WP and Local. Watched 1 video in Variables lab. 
+
+Thoughts: Completed the Global PHP Internals video.
+
+### Day 20: August 23, 2019
+
+**Today's Progress: Finished the PHP Variables lab. 
+
+Thoughts: Finished 7 videos today on static variables, passing by reference, namespacing variables, variable scope when including files, and type juggling. Next lab is the Conditionals Lab, something I need practice on.
+
+### Day 21: August 24, 2019
+
+**Today's Progress: Plan: start the conditionals lab.  
+
+Thoughts: xxx.
+
+
 
