day 22 and 23 updates

--- a/round-1-2019.md
+++ b/round-1-2019.md
@@ -119,11 +119,20 @@ Thoughts: Completed the Global PHP Internals video.
 
 Thoughts: Finished 7 videos today on static variables, passing by reference, namespacing variables, variable scope when including files, and type juggling. Next lab is the Conditionals Lab, something I need practice on.
 
-### Day 21: August 24, 2019
+### Day 21: August 26, 2019
 
-**Today's Progress: Plan: start the conditionals lab.  
+**Today's Progress: Started and completed the conditionals lab.  
 
-Thoughts: xxx.
+Thoughts: This was an easy and quick lab.
 
+### Day 22: August 27, 2019
 
+**Today's Progress: Started the string building lab.  
 
+Thoughts: Watched 3 videos - the intro, embedding variables in a string and embedding complex variables in a string. She stresses readable code.
+
+### Day 23: August 28, 2019
+
+**Today's Progress: Completed x videos on string building.  
+
+Thoughts: Watched 3 videos - concatenating, concatenating and assigning shorthad, formatting a string using placeholders, specifying which argument in a formatted string, and has substring.
