--- a/round-1-2019.md
+++ b/round-1-2019.md
@@ -133,6 +133,18 @@ Thoughts: Watched 3 videos - the intro, embedding variables in a string and embe
 
 ### Day 23: August 28, 2019
 
-**Today's Progress: Completed x videos on string building.  
+**Today's Progress: Completed 5 videos on string building.  
 
-Thoughts: Watched 3 videos - concatenating, concatenating and assigning shorthad, formatting a string using placeholders, specifying which argument in a formatted string, and has substring.
+Thoughts: Watched 5 videos - concatenating, concatenating and assigning shorthad, formatting a string using placeholders, specifying which argument in a formatted string, and has substring.
+
+### Day 24: August 29, 2019
+
+**Today's Progress: Completed the string building lab. Next up is More string processing.
+
+Thoughts: Watched 6 videos - replacing strings, getting string length, character encoding, substring for utf-8, strip out characters, and wrap up.
+
+### Day 25: August 30, 2019
+
+**Today's Progress: Plan - Completed 7 videos (half) of the More string processing lab.
+
+Thoughts: Watched x videos - .
