Updates through day 29

--- a/round-1-2019.md
+++ b/round-1-2019.md
@@ -143,8 +143,38 @@ Thoughts: Watched 5 videos - concatenating, concatenating and assigning shorthad
 
 Thoughts: Watched 6 videos - replacing strings, getting string length, character encoding, substring for utf-8, strip out characters, and wrap up.
 
-### Day 25: August 30, 2019
+### Day 25: September 6, 2019
 
-**Today's Progress: Plan - Completed 7 videos (half) of the More string processing lab.
+**Today's Progress: Completed 5 videos of the More string processing lab.
 
-Thoughts: Watched x videos - .
+Thoughts: Watched 5 videos - Including Intro, checking if a string starts with, explaining starts with, string ends with parts 1 and 2.
+
+### Day 26: September 9, 2019
+
+**Today's Progress: Completed 2 videos of the More string processing lab.
+
+Thoughts: Watched 2 videos - Including Has Substring and truncate by character
+
+### Day 27: September 10, 2019
+
+**Today's Progress: Completed the More string processing lab. Worked on developing Gutenberg blocks using Block Lab plugin.
+
+Thoughts: Watched 6 videos - Including truncate by word, convert to lower case, convert to upper case, splitting strin into array, joining array elements into a string and wrap up. Created a "Sponsors" custom GB block using Block Lab. Figured out how to display it in preview, how to style the preview display and how to style the block on the page. It's not as intuitive as they would have you believe.
+
+### Day 28: September 11, 2019
+
+**Today's Progress: Started PHP Output Buffer Basics lab.
+
+Thoughts: Watched 1 videos - Intro
+
+### Day 29: September 12, 2019
+
+**Today's Progress: Completed PHP Output Buffer Basics lab. Started Ins & Outs of Namespacing
+
+Thoughts: Watched 4 videos - Setup, Add HTML to content and return it back, shortcode view file, and wrap up. Watched 3 videos of Namespacing including - Intro, What & Why, Why namespacing instead of prefixing.
+
+### Day 30: September 13, 2019
+
+**Today's Progress: Plan - Watch 6 videos of the Ins & Outs of Namespacing
+
+Thoughts: Watched x videos - Including Intro, What & Why
